WIP added fxml reloading on language change

--- a/src/main/resources/com/wlf/app/i18n_de.properties
+++ b/src/main/resources/com/wlf/app/i18n_de.properties
@@ -7,5 +7,6 @@ menuBar.edit=Bearbeiten
 menuBar.file=Datei
 menuBar.help=Hilfe
 settings.General=Allgemein
+settings.language.warning=WARNUNG: GUI wird neu geladen!
 settings.save=Speichern
 theme=Design
