--- a/src/main/resources/com/wlf/app/i18n_en.properties
+++ b/src/main/resources/com/wlf/app/i18n_en.properties
@@ -7,5 +7,6 @@ menuBar.edit=Edit
 menuBar.file=File
 menuBar.help=Help
 settings.General=General
+settings.language.warning=WARNING: GUI will reload!
 settings.save=Save
 theme=Theme
