WIP added classic FX themes plus dark variant to theme selection; fixed screen center; tidied up code

--- a/src/main/resources/com/wlf/app/i18n_de.properties
+++ b/src/main/resources/com/wlf/app/i18n_de.properties
@@ -6,7 +6,8 @@ menu.preferences=Einstellungen
 menuBar.edit=Bearbeiten
 menuBar.file=Datei
 menuBar.help=Hilfe
-settings.General=Allgemein
+settings.cancel=Abbrechen
+settings.general=Allgemein
 settings.language.warning=WARNUNG: GUI wird neu geladen!
 settings.save=Speichern
 theme=Design
