--- a/src/main/resources/com/wlf/app/i18n_en.properties
+++ b/src/main/resources/com/wlf/app/i18n_en.properties
@@ -6,7 +6,8 @@ menu.preferences=Preferences
 menuBar.edit=Edit
 menuBar.file=File
 menuBar.help=Help
-settings.General=General
+settings.cancel=Cancel
+settings.general=General
 settings.language.warning=WARNING: GUI will reload!
 settings.save=Save
 theme=Theme
