added actual translations

--- a/src/main/resources/com/wlf/app/i18n/preferences_de.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_de.properties
@@ -1,6 +1,6 @@
-language=Language
-cancel=Cancel
-general=General
-language.warning=WARNING: GUI will reload!
-save=Save
-theme=Theme
+language=Sprache
+cancel=Abbrechen
+general=Allgemein
+language.warning=ACHTUNG: GUI wird neugeladen!
+save=Speichern
+theme=Style
