--- a/src/main/resources/com/wlf/app/i18n/preferences_ru.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_ru.properties
@@ -1,6 +1,6 @@
-language=Language
-cancel=Cancel
-general=General
-language.warning=WARNING: GUI will reload!
-save=Save
-theme=Theme
+language=язык
+cancel=отмена
+general=общий
+language.warning=ПРЕДУПРЕЖДЕНИЕ: Графический интерфейс перезагрузится!
+save=сохранять
+theme=тема
