--- a/src/main/resources/com/wlf/app/i18n/preferences_es.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_es.properties
@@ -1,6 +1,6 @@
-language=Language
-cancel=Cancel
-general=General
-language.warning=WARNING: GUI will reload!
-save=Save
-theme=Theme
+language=Idioma
+cancel=Anular
+general=Ajustes Generales
+language.warning=ATENCIÓN: ¡La interfaz gráfica de usuario se recargará!
+save=Guardar 
+theme=Tema
