--- a/src/main/resources/com/wlf/app/i18n/preferences_fr.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_fr.properties
@@ -1,6 +1,6 @@
-language=Language
-cancel=Cancel
-general=General
-language.warning=WARNING: GUI will reload!
-save=Save
-theme=Theme
+language=Langue
+cancel=Annuler
+general=Paramètres Généraux
+language.warning=ATTENTION: L'interface graphique va se recharger !
+save=Enregistrer
+theme=Thème
