--- a/src/main/resources/com/wlf/app/i18n/preferences_it.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_it.properties
@@ -1,6 +1,6 @@
-language=Language
-cancel=Cancel
-general=General
-language.warning=WARNING: GUI will reload!
-save=Save
-theme=Theme
+language=Lingua
+cancel=Annula
+general=Impostazioni Generali
+language.warning=ATTENZIONE: L'interfaccia grafica verrà ricaricata!
+save=Salva
+theme=Tema
