incorporated translations into GUI

--- a/src/main/resources/com/wlf/app/i18n/preferences.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences.properties
@@ -4,3 +4,6 @@ general=General
 language.warning=WARNING: GUI will reload!
 save=Save
 theme=Theme
+dir.downloads=Download directory:
+dir.tfe=The First Encounter directory:
+dir.tse=The Second Encounter directory:
