--- a/src/main/resources/com/wlf/app/i18n/preferences_de.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_de.properties
@@ -4,3 +4,6 @@ general=Allgemein
 language.warning=ACHTUNG: GUI wird neugeladen!
 save=Speichern
 theme=Style
+dir.downloads=Downloadverzeichnis:
+dir.tfe=The First Encounter Verzeichnis:
+dir.tse=The Second Encounter Verzeichnis:
