--- a/src/main/resources/com/wlf/app/i18n/preferences_es.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_es.properties
@@ -4,3 +4,6 @@ general=Ajustes Generales
 language.warning=ATENCIÓN: ¡La interfaz gráfica de usuario se recargará!
 save=Guardar 
 theme=Tema
+dir.downloads=Download directory:
+dir.tfe=The First Encounter directory:
+dir.tse=The Second Encounter directory:
