--- a/src/main/resources/com/wlf/app/i18n/preferences_fr.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_fr.properties
@@ -4,3 +4,6 @@ general=Paramètres Généraux
 language.warning=ATTENTION: L'interface graphique va se recharger !
 save=Enregistrer
 theme=Thème
+dir.downloads=Download directory:
+dir.tfe=The First Encounter directory:
+dir.tse=The Second Encounter directory:
