--- a/src/main/resources/com/wlf/app/i18n/preferences_ru.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_ru.properties
@@ -4,3 +4,6 @@ general=общий
 language.warning=ПРЕДУПРЕЖДЕНИЕ: Графический интерфейс перезагрузится!
 save=сохранять
 theme=тема
+dir.downloads=Download directory:
+dir.tfe=The First Encounter directory:
+dir.tse=The Second Encounter directory:
