--- a/src/main/resources/com/wlf/app/i18n/preferences_it.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_it.properties
@@ -4,3 +4,6 @@ general=Impostazioni Generali
 language.warning=ATTENZIONE: L'interfaccia grafica verrà ricaricata!
 save=Salva
 theme=Tema
+dir.downloads=Download directory:
+dir.tfe=The First Encounter directory:
+dir.tse=The Second Encounter directory:
