added support for download limits

--- a/src/main/resources/com/wlf/app/i18n/preferences.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences.properties
@@ -7,3 +7,4 @@ theme=Theme
 dir.downloads=Download directory:
 dir.tfe=The First Encounter directory:
 dir.tse=The Second Encounter directory:
+downloads.max=Max. download threads:
