--- a/src/main/resources/com/wlf/app/i18n/preferences_de.properties
+++ b/src/main/resources/com/wlf/app/i18n/preferences_de.properties
@@ -7,3 +7,4 @@ theme=Style
 dir.downloads=Downloadverzeichnis:
 dir.tfe=The First Encounter Verzeichnis:
 dir.tse=The Second Encounter Verzeichnis:
+downloads.max=Max. Download threads:
