--- a/src/main/resources/com/wlf/app/i18n/repositoryView_de.properties
+++ b/src/main/resources/com/wlf/app/i18n/repositoryView_de.properties
@@ -6,3 +6,4 @@ downloads.status=Status
 downloads.size=Größe
 downloads.stop.tooltip=Downloads anhalten
 downloads.pause.tooltip=Downloads pausieren
+downloads.clear=Liste leeren
