--- a/src/main/resources/com/wlf/app/i18n/repositoryView_it.properties
+++ b/src/main/resources/com/wlf/app/i18n/repositoryView_it.properties
@@ -6,3 +6,4 @@ downloads.status=Status
 downloads.size=Size
 downloads.stop.tooltip=Stop downloads
 downloads.pause.tooltip=Pause downloads
+downloads.clear=Clear Finished
