re-add download tasks to view when reloading GUI

--- a/src/main/resources/com/wlf/app/i18n/repositoryView_de.properties
+++ b/src/main/resources/com/wlf/app/i18n/repositoryView_de.properties
@@ -7,3 +7,4 @@ downloads.size=Größe
 downloads.stop.tooltip=Downloads anhalten
 downloads.pause.tooltip=Downloads pausieren
 downloads.clear=Liste leeren
+loading=Download angefragt...
