--- a/src/main/resources/com/wlf/app/i18n/repositoryView.properties
+++ b/src/main/resources/com/wlf/app/i18n/repositoryView.properties
@@ -7,3 +7,4 @@ downloads.size=Size
 downloads.stop.tooltip=Stop downloads
 downloads.pause.tooltip=Pause downloads
 downloads.clear=Clear Finished
+loading=Download requested...
