--- a/src/main/resources/com/wlf/app/i18n/mainView_de.properties
+++ b/src/main/resources/com/wlf/app/i18n/mainView_de.properties
@@ -23,6 +23,9 @@ filter.type.mod=Modifikation
 filter.type.skin=Skin
 table.completed=A
 table.dateAdded=Hinzugefügt am
+table.dateCompleted=Abgeschlossen am
+table.dateCreated=Erstellt am
+table.dateLastPlayed=Zuletzt gespielt
 table.file=Datei
 table.game=Spiel
 table.installed=I
