--- a/src/main/resources/com/wlf/app/i18n/mainView_ru.properties
+++ b/src/main/resources/com/wlf/app/i18n/mainView_ru.properties
@@ -23,6 +23,9 @@ filter.type.mod=Mod
 filter.type.skin=Skin
 table.completed=C
 table.dateAdded=Date added
+table.dateCompleted=Completion date
+table.dateCreated=Date created
+table.dateLastPlayed=Last played
 table.file=File
 table.game=Game
 table.installed=I
