Implemented basic file import functionality

--- a/src/main/resources/com/wlf/app/i18n/mainView.properties
+++ b/src/main/resources/com/wlf/app/i18n/mainView.properties
@@ -1,3 +1,4 @@
+actions.importFile=Import File
 actions.playTFE=Play The First Encounter
 actions.playTSE=Play The Second Encounter
 actions.rescanDownloads=Rescan Download Directory
