--- a/src/main/resources/com/wlf/app/i18n/mainView_de.properties
+++ b/src/main/resources/com/wlf/app/i18n/mainView_de.properties
@@ -1,3 +1,4 @@
+actions.importFile=Datei Importieren
 actions.playTFE=The First Encounter spielen
 actions.playTSE=The Second Encounter spielen
 actions.rescanDownloads=Downloadverzeichnis Scannen
